--- a/Home page.html
+++ b/Home page.html
@@ -330,7 +330,8 @@
             <div class="hero-content">
                 <h1>EXPLORE. DREAM. DISCOVER.</h1>
                 <p>Discover breathtaking destinations, unique adventures, and hidden gems from around the world and share your own travel stories with the world!</p>
-                <a href="#" class="btn">START EXPLORING</a>
+                <a href="link page.html" class="btn" target="_blank">START EXPLORING</a>
+
             </div>
         </div>
     </div>
